force-app/main/default/objects/Participants_List__c/Participants_List__c.object-meta.xml
<CustomObject>
    <label>Participants List</label>
    <nameField>
        <label>Participants  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>