force-app/main/default/objects/Participants_List__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLIENTE A</fullName>
                <label>CUSTOMER A</label>
            </value>
            <value>
                <fullName>CLIENTE B</fullName>
                <label>CUSTOMER B</label>
            </value>
            <value>
                <fullName>CLIENTE C</fullName>
                <label>CUSTOMER C</label>
            </value>
            <value>
                <fullName>MEGA FARMER</fullName>
            </value>
            <value>
                <fullName>FARMER</fullName>
            </value>
            <value>
                <fullName>CLIENTE Estratégico</fullName>
                <label>Strategy customer</label>
            </value>
            <value>
                <fullName>CLIENTE Convencional</fullName>
                <label>Conventional customer</label>
            </value>
            <value>
                <fullName>CLIENTE Transaccional</fullName>
                <label>Transactional customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>