force-app/main/default/objects/Participants_List__c/fields/Crop__c.field-meta.xml
<CustomField>
    <fullName>Crop__c</fullName>
    <label>Crop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maíz</fullName>
                <label>Corn</label>
            </value>
            <value>
                <fullName>Soja</fullName>
                <label>Soybean</label>
            </value>
            <value>
                <fullName>Trigo</fullName>
                <label>Wheat</label>
            </value>
            <value>
                <fullName>Sorgo</fullName>
                <label>Sorghum</label>
            </value>
            <value>
                <fullName>Girasol</fullName>
                <label>Sunflower</label>
            </value>
            <value>
                <fullName>Cebada</fullName>
                <label>Barley</label>
            </value>
            <value>
                <fullName>Maní</fullName>
                <label>Peanut</label>
            </value>
            <value>
                <fullName>Caña de Azúcar</fullName>
                <label>Sugarcane</label>
            </value>
            <value>
                <fullName>Tabaco</fullName>
                <label>Tobacco</label>
            </value>
            <value>
                <fullName>Poroto</fullName>
                <label>Bean</label>
            </value>
            <value>
                <fullName>Algodón</fullName>
                <label>Cotton</label>
            </value>
            <value>
                <fullName>Cítricos</fullName>
                <label>Citrus</label>
            </value>
            <value>
                <fullName>Limon</fullName>
                <label>Lemon</label>
            </value>
            <value>
                <fullName>Arroz</fullName>
                <label>Rice</label>
            </value>
            <value>
                <fullName>Papa</fullName>
                <label>Potato</label>
            </value>
            <value>
                <fullName>Cebolla</fullName>
                <label>Onion</label>
            </value>
            <value>
                <fullName>Hortalizas</fullName>
                <label>Vegetables</label>
            </value>
            <value>
                <fullName>Alfalfa</fullName>
            </value>
            <value>
                <fullName>Aguacate</fullName>
                <label>Avocado</label>
            </value>
            <value>
                <fullName>Tomate y Chile</fullName>
                <label>Tomatoe &amp; pepper</label>
            </value>
            <value>
                <fullName>Frutillas</fullName>
                <label>Berries</label>
            </value>
            <value>
                <fullName>Agave</fullName>
            </value>
            <value>
                <fullName>Piña</fullName>
                <label>Pineapple</label>
            </value>
            <value>
                <fullName>Brasicas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>