force-app/main/default/objects/Participants_List__c/fields/Hectares_of_Field__c.field-meta.xml
<CustomField>
    <fullName>Hectares_of_Field__c</fullName>
    <label>Hectares of Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>