force-app/main/default/objects/Participants_List__c/fields/Preferred_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Product_Name__c</fullName>
    <label>Preferred Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>