force-app/main/default/objects/Participants_List__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HERBICIDAS</fullName>
                <label>HERBICIDES</label>
            </value>
            <value>
                <fullName>INSECTICIDAS</fullName>
                <label>INSECTICIDES</label>
            </value>
            <value>
                <fullName>FUNGICIDAS</fullName>
                <label>FUNGICIDES</label>
            </value>
            <value>
                <fullName>BIOLOGICOS</fullName>
                <label>BIOLOGICAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>