force-app/main/default/objects/Participants_List__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOA</fullName>
            </value>
            <value>
                <fullName>NEA</fullName>
            </value>
            <value>
                <fullName>CORDOBA</fullName>
            </value>
            <value>
                <fullName>LITORAL</fullName>
            </value>
            <value>
                <fullName>BS AS</fullName>
            </value>
            <value>
                <fullName>LA PAMPA</fullName>
            </value>
            <value>
                <fullName>CUYO</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>Occidente Norte</fullName>
            </value>
            <value>
                <fullName>Occidente Sur</fullName>
            </value>
            <value>
                <fullName>Michichoacán</fullName>
            </value>
            <value>
                <fullName>Bajío</fullName>
            </value>
            <value>
                <fullName>Pacifico</fullName>
            </value>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Altiplano</fullName>
            </value>
            <value>
                <fullName>Golfo Norte</fullName>
            </value>
            <value>
                <fullName>Golfo Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>