force-app/main/default/objects/Participants_List__c/fields/Sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_rep__c</fullName>
    <label>Sales rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>