force-app/main/default/objects/Participants_List__c/validationRules/Not_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    ISBLANK(Email__c) || 
    REGEX(Email__c, &quot;^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Please input correct email address</errorMessage>
</ValidationRule>