force-app/main/default/objects/Participants_List__c/validationRules/Validate_Tel.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Tel</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
    ISBLANK(Phone__c) || 
    REGEX(Phone__c, &quot;[0-9]*&quot;)
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please input correct phone number</errorMessage>
</ValidationRule>